fixed button contrast

--- a/css/cat.scss
+++ b/css/cat.scss
@@ -1,5 +1,5 @@
 // Varibles
-$font: Arial;
+$font: "Inclusive Sans", sans-serif;;
 $background: #1C1C1D;
 $purple: #DABFFF;
 $offwhite: #D9D9D9;
@@ -240,20 +240,20 @@ nav {
             justify-content: center;
             align-items: center;
             margin: 10px;
-
             border: none;
             width: 120px;
             height: 50px;
-            color: $offwhite;
-            text-shadow: 1px 1px $background;
+            color: #ffdcdc;
+            text-shadow: 0 0 10px $background;
             text-align: center;
             text-decoration: none;
             font-size: 18px;
+            font-weight: bold;
             background-color: #006deb;
             border-radius: 15px;
             box-shadow: 0 9px #006deb83;
             &:active {
-                color: #00000083;
+                color: #e6e6e683;
                 box-shadow: 0 9px rgb(29, 29, 29);
                 transform: translateY(4px);
             }
